<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unisa.guardianhouse.activities.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <LinearLayout
            android:id="@+id/home_buttons1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_drawer"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/button_drawer" />

            <Button
                android:id="@+id/button_get_users"
                android:layout_width="230dp"
                android:layout_marginTop="1dp"
                android:layout_height="wrap_content"
                android:text="@string/button_get_users" />

            <Button
                android:id="@+id/button_apartment"
                android:layout_marginTop="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showApartment"
                android:text="@string/button_apartment" />

            <Button
                android:id="@+id/button_review"
                android:layout_width="230dp"
                android:layout_marginTop="1dp"
                android:layout_height="wrap_content"
                android:text="@string/button_review" />

            <Button
                android:id="@+id/button_map"
                android:layout_width="230dp"
                android:layout_marginTop="1dp"
                android:layout_height="wrap_content"
                android:text="GOOGLE MAPS API TEST" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>