<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="6dp"
    >

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/img_descr1"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:src="@drawable/icon_user" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_toEndOf="@+id/imageView1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/label_username" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/text_username"
        android:layout_toEndOf="@+id/text_username"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_toEndOf="@+id/imageView1"
        android:layout_below="@+id/username"
        android:layout_marginLeft="10dp"
        android:text="@string/label_name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/text_name"
        android:layout_toEndOf="@+id/text_name"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/username" />

    <TextView
        android:id="@+id/text_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_toEndOf="@+id/imageView1"
        android:layout_below="@+id/name"
        android:layout_marginLeft="10dp"
        android:text="@string/label_surname" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/text_surname"
        android:layout_toEndOf="@+id/text_surname"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/text_name" />

</RelativeLayout>