<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unisa.guardianhouse.fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/app_logo_big"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="Email"
            android:layout_centerHorizontal="true"
            android:textColor="@color/ColorPrimary"
            android:textSize="20dp"
            />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:hint="@string/form_email"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress" >
        </EditText>

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText1"
            android:layout_marginTop="10dp"
            android:text="Password"
            android:layout_centerHorizontal="true"
            android:textColor="@color/ColorPrimary"
            android:textSize="20dp"
            />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title2"
            android:hint="@string/form_password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword" />

<!--
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="30dp"
            android:text="@string/button_login2" />
-->
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:background="#1E88E5"
            materialdesign:rippleSpeed="200"
            android:text="@string/button_login2" />

<!--
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:text="@string/button_register2"
            android:textColor="#000000" />
-->
        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:background="#1E88E5"
            materialdesign:rippleSpeed="300"
            android:text="@string/button_register2" />

    </RelativeLayout>

</FrameLayout>
